# os_lab_03

./: .gitignore  README.md  os_3_report.docx
src/: CMakeLists.txt  child  child.c  parent  parent.c
src/build-wsl/: CMakeCache.txt  Makefile  child  cmake_install.cmake  parent
